# aws-utilities

./: .gitignore  .pre-commit-config.yaml  README.md  aws_switch.py  build-requirements.in  build-requirements.txt  dev-requirements.in  dev-requirements.txt  pending_stack_resources.py  pyproject.toml  requirements.in  requirements.txt  setup.py  sync-requirements.sh  tail_cloudwatch_logs.py  tail_stack_events.py  update-requirements.sh  watch_resource.py
.github/: dependabot.yml
aws_utilities/: aws_switch.py  pending_stack_resources.py  tail_cloudwatch_logs.py  tail_stack_events.py  wait_for_stack_complete.py  watch_resource.py
