[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "aws-utilities"
version = "1.3.1"
description = "Utilities for use with aws."
readme = "README.md"
authors = ["Justin Patrin <papercrane@reversefold.com>"]
homepage = "https://github.com/reversefold/aws-utilities"
repository = "https://github.com/reversefold/aws-utilities.git"
packages = [
    {include="aws_utilities"},
]
license = "MIT"

[tool.poetry.scripts]
"tail_cloudwatch_logs" = "aws_utilities.tail_cloudwatch_logs:main"
"tail_stack_events" = "aws_utilities.tail_stack_events:main"
"wait_for_stack_complete" = "aws_utilities.wait_for_stack_complete:main"
"watch_resource" = "aws_utilities.watch_resource:main"
"pending_stack_resources" = "aws_utilities.pending_stack_resources:main"

[tool.poetry.dependencies]
python = "^3.7"
ansiwrap = "^0.8.4"
boto3 = "^1.9"
colorama = "^0.4.1"
docopt = "^0.6.2"
ec2-metadata = "^2.0"
eventlet = ">=0.24.1,<0.26.0"
tenacity = ">=5,<9"
urllib3 = ">=1.24,<1.26"

[tool.poetry.dev-dependencies]

# [build-system]
# requires = ["flit"]
# build-backend = "flit.buildapi"

# [tool.flit.metadata]
# module = "tail_cloudwatch_logs"
# dist-name = "aws-utilities"
# author = "Justin Patrin"
# author-email = "papercrane@reversefold.com"
# home-page = "https://github.com/reversefold/aws-utilities"
# requires = [
#     "ansiwrap",
#     "boto3",
#     "colorama",
#     "docopt",
#     "ec2-metadata",
#     "eventlet",
#     "functools32; python_version < '3.2'",
#     "tenacity",
#     "urllib3",
# ]
# description-file = 'README.md'
# requires-python = ">3.3,<4"

# [tool.flit.scripts]
# "tail_cloudwatch_logs.py" = "tail_cloudwatch_logs:main"
# "tail_stack_events.py" = "tail_stack_events:main"
# "wait_for_stack_complete.py" = "wait_for_stack_complete:main"
# "watch_resource.py" = "watch_resource:main"
